# pipeline

./: .gitignore  README.md  mkdocs.yml
.github/workflows/: docs-pages.yml
TeleopSoftware/: .gitignore  README.md  launch.py  launch_devs.py  teleop_device_launcher.py  teleop_ros_adapter.py  teleop_runtime_config.py  teleop_runtime_core.py
TeleopSoftware/Spark/: SparkNode.py  offsets_lightning.pickle  offsets_thunder.pickle
TeleopSoftware/UR/: arms.py  ur_adapters.py
TeleopSoftware/launch_helpers/: run.py  tk_functions.py
data_pipeline/: README.md  V1_SPEC.md  V2_SPEC.md  archive_episode.py  calibrate_rig.py  compute_world_board.py  convert_episode_bag_to_lerobot.py  debug_charuco_detection.py  device_discovery.py  gelsight_bridge.py  generate_dummy_episode.py  operator_console.py  operator_console_backend.py  operator_console_qt.py  pipeline_utils.py  realsense_bridge.py  record_calibration_poses.py  record_episode.py  requirements-converter.txt  requirements-teleop.txt  session_capture_plan.py  setup_realsense_contract_runtime.sh  setup_shared_venv.sh  setup_viewer_env.sh  validate_calibration_click.py  validate_eval_set.py  verify_archive_bag.py
data_pipeline/archive/: operator_console_tk_v1.py
data_pipeline/calibration/: __init__.py  core.py  realsense.py  ur.py
data_pipeline/configs/: multisensor_20hz.yaml  multisensor_20hz_lightning.yaml  multisensor_20hz_thunder.yaml  operator_console_presets.yaml  (+2 more)
data_pipeline/ros2/spark_realsense_bridge/: CMakeLists.txt  package.xml
data_pipeline/ros2/spark_realsense_bridge/src/: spark_realsense_bridge.cpp
(+45 files in other folders)
