<?xml version="1.0"?>
<package format="3">
  <name>spark_realsense_bridge</name>
  <version>0.1.0</version>
  <description>Host-capture-time RealSense bridge for the SPARK V1 topic contract.</description>

  <maintainer email="noreply@example.com">SPARK Pipeline</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
